fixed icon alignment on mobile

--- a/public/bootstrap/less/icon-mixins.less
+++ b/public/bootstrap/less/icon-mixins.less
@@ -104,7 +104,6 @@
       content: @charCode;
       position: absolute;
       left: 0;
-      top: 0;
       -webkit-font-smoothing: antialiased;
       font-size: 14px;
     }
@@ -120,7 +119,6 @@
     content: @charCode;
     position: absolute;
     left: 0;
-    top: 1px;
     -webkit-font-smoothing: antialiased;
     font-size: 16px;
   }
